--- a/db-gpt/template.yaml
+++ b/db-gpt/template.yaml
@@ -1,9 +1,7 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: >
-  db-gpt
-
-  Sample SAM Template for db-gpt
+  Telegram bot connected to ChatGPT as a POC for Ethority
 
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
