--- a/db-gpt/telegram-bot/package.json
+++ b/db-gpt/telegram-bot/package.json
@@ -27,5 +27,10 @@
     "prettier": "^2.5.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "serverless-http": "^3.2.0",
+    "telegraf": "^4.12.2"
   }
 }
