--- a/db-gpt/template.yaml
+++ b/db-gpt/template.yaml
@@ -12,20 +12,20 @@ Globals:
     TracingEnabled: true
 
 Resources:
-  HelloWorldFunction:
+  TelegramBotFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: hello-world/
+      CodeUri: telegram-bot/
       Handler: app.lambdaHandler
       Runtime: nodejs18.x
       Architectures:
       - x86_64
       Events:
-        HelloWorld:
+        TelegramBot:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
-            Path: /hello
-            Method: get
+            Path: /telegram
+            Method: post
     Metadata: # Manage esbuild properties
       BuildMethod: esbuild
       BuildProperties:
@@ -59,12 +59,12 @@ Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  HelloWorldApi:
-    Description: API Gateway endpoint URL for Prod stage for Hello World function
+  TelegramBotApi:
+    Description: API Gateway endpoint URL for Prod stage for Telegram Bot function
     Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
-  HelloWorldFunction:
-    Description: Hello World Lambda Function ARN
-    Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldFunctionIamRole:
-    Description: Implicit IAM Role created for Hello World function
-    Value: !GetAtt HelloWorldFunctionRole.Arn
+  TelegramBotFunction:
+    Description: Telegram Bot Lambda Function ARN
+    Value: !GetAtt TelegramBotFunction.Arn
+  TelegramBotFunctionIamRole:
+    Description: Implicit IAM Role created for Telegram Bot function
+    Value: !GetAtt TelegramBotFunctionRole.Arn
